--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.19.2",
     "googleapis": "^140.0.1",
     "netlify-cli": "^17.33.0",
+    "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0"
   }
 }
